src/components/ProjectTimeline/ProjectTimeline.scss
.timeline-graph-container {
  font-family: 'Helsinki Grotesk Medium', sans-serif;
  padding: 40px 20px 20px 20px;
  margin-top: 20px;
  overflow: hidden;
  position: relative;
  background-color: $light-gray3;
  
  .timeline-error-message {
    position: absolute;
    z-index: 4;
    margin-left: -160px;
    left: 50%;
    top: 20px;
    width: 336px;
    height: 119px;
  }
  .timeline-onhold-message {
    position: absolute;
    z-index: 4;
    margin-left: -160px;
    left: 40%;
    top: 20px;
    width: 603px;
    height: 120px;
    border-left: 8px solid #D18200;
    background-color: #FFF4B4;
    text-align: center;
    font-size: $size18;
    font-weight: 700;

    span {
      position: absolute;
      top: 18px;
      left: 48px;
      opacity: 1;
    }
    p {
      font-size: $size14;
      font-weight: 400;
      position: absolute;
      top: 55px;
      left: 16px;
      width: 80%;
      text-align: flex-start;
    }
    .alert-icon-yellow {
      z-index: 1000;
      position: absolute;
      left: 16px;
      top: 16px;
      padding: 0;
      width: 24px;
      height: 24px;
      background: url('../../assets/icons/alert-icon-yellow.svg') no-repeat;
      background-position-x: center;
      background-position-y: center;
      background-size: $size24;
    }
  }

  .timeline-load-project-message {
    position: absolute;
    z-index: 1;
    left: 50%;
    top: 10px;
    text-align: center;
  }

  .timeline-item-container {
    display: grid;
    gap: 0;

    .timeline-item {
      position: relative;
      margin-bottom: 46px;
      height: 20px;
      &.first {
        border-top-left-radius: 20px;
        border-bottom-left-radius: 20px;
      }
      &.last {
        border-top-right-radius: 20px;
        border-bottom-right-radius: 20px;
      }
      .deadline-name-over {
        font-family: 'Helsinki Grotesk Medium', sans-serif;
        position: absolute;
        bottom: 20px;
        font-size: $size12;
        width: 118px;
        font-weight: 700;
      }
      .deadline-name-inside {
        position: absolute;
        left: 2px;
        z-index: 3;
        font-size: $size12;
        width: 120px;
      }
      .deadline-milestone {
        .milestone-message {
          position: absolute;
          top: 20px;
          line-height: normal;
          font-size: $size12;
        }
        .milestone-icon {
          position: absolute;
          z-index: 2;
          width: 15px;
          height: 15px;
          top: 2px;
          &.square {
            top: 7px;
            left: 2px;
            width: 5px;
            height: 5px;
            &.second {
              left: 10px;
            }
          }
          &.inner {
            top: 4px;
            height: 12px;
            width: 100%;
            left: 0;
            &.start {
              width: 17px;
              left: auto;
              border-bottom-left-radius: 5px;
              border-top-left-radius: 5px;
            }
            &.end {
              width: 17px;
              left: auto;
              right: 2px;
              border-bottom-right-radius: 5px;
              border-top-right-radius: 5px;
            }
          }
          &.sphere {
            border-radius: 15px;
            right: 2px;
          }
          &.white {
            background-color: $white;
          }
          &.black {
            background-color: $black;
            border: 2px solid $white;
          }
        }
      }
    }
  }
  .timeline-months {
    display: grid;
    grid-template-columns: repeat(13, 1fr);

    .timeline-month {
      border-bottom: 2px solid $color-disabled;
      border-left: 2px solid $color-disabled;
      color: $color-disabled;
      text-align: center;
      position: relative;
      height: 10px;
      margin-bottom: 30px;
      font-size: $size12;
      span {
        position: absolute;
        left: 8px;
        top: 10px;
      }
      .timeline-now-month {
        display: grid;
        grid-template-columns: repeat(5, 1fr);
        .now-marker {
          color: $black;
          width: 1px;
          height: 60px;
          border: 1px solid blue;
          margin-top: -50px;
          span {
            margin-top: -34px;
          }
        }
      }
    }
  }
}
.timeline-error {
  color: $color-disabled;
  padding-top: 33px;
}
.hide-background {
  opacity: 0.8;
}

